--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ Pillow==8.0.0
 pycodestyle==2.6.0
 pytz==2020.1
 sqlparse==0.4.1
+gunicorn==20.0.4
+psycopg2-binary==2.8.5
+django-environ==0.4.5
+flake8==3.8.4
