update .env.defauld and add fixture

--- a/.env.default
+++ b/.env.default
@@ -1,8 +1,8 @@
 DEBUG=True
 SECRET_KEY=
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+DB_NAME=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 DB_HOST=db
 DB_PORT=5432
