--- a/.github/workflows/foodgram.yaml
+++ b/.github/workflows/foodgram.yaml
@@ -25,16 +25,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: frolkit/foodgram
-          tag_with_ref: true
+          password: ${{ secrets.DOCKER_TOKEN }}
+        
+        name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: frolkit/foodgram:latest
 
   deploy:
    runs-on: ubuntu-latest
@@ -47,7 +55,7 @@ jobs:
        username: ${{ secrets.USER }}
        key: ${{ secrets.SSH_KEY }}
        script: |
-         sudo docker pull frolkit/foodgram
+         sudo docker pull frolkit/foodgram:latest
          sudo docker-compose -f /home/user/dev/foodgram/docker-compose.yaml stop
          sudo docker-compose -f /home/user/dev/foodgram/docker-compose.yaml up
 
