--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,7 @@
 server {
-    # следи за портом 80 на сервере с IP <ваш-ip>
     listen 80;
-    server_name 127.0.0.1;
+    server_name 127.0.0.1 localhost;
 
-    # любой другой запрос передай серверу Gunicorn
     location / {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -12,7 +10,6 @@ server {
         proxy_pass http://web:8000;
     }
 
-    # если в адресе запроса есть аргумент '/static/' - верни файл из директории static/
     location /static/ {
         root /etc/nginx/;
     }
