--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,7 @@ server {
     server_name 127.0.0.1 localhost;
 
     location / {
+        client_max_body_size 20M;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
